[project]
name = "jax-churn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dialog",
    "fastapi>=0.135.1",
    "gemma",
    "kauldron",
    "protobuf<4",  # Tensorboard which Gemma uses relies on an old protobuf.
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[tool.uv.sources]
gemma = { git = "https://github.com/google-deepmind/gemma.git" }
kauldron = { git = "https://github.com/google-research/kauldron.git" }
dialog = { git = "https://github.com/google-deepmind/dialog.git" }
